--- a/src/app/barra-lateral/barra-lateral.component.html
+++ b/src/app/barra-lateral/barra-lateral.component.html
@@ -22,7 +22,8 @@
         </button>
       }
       <span>angularMaterial</span>
-    </mat-toolbar>
+      <router-outlet></router-outlet>
+     </mat-toolbar>
     <!-- Add Content Here -->
   </mat-sidenav-content>
 </mat-sidenav-container>
