--- a/src/app/barra-lateral/barra-lateral.component.html
+++ b/src/app/barra-lateral/barra-lateral.component.html
@@ -5,9 +5,9 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item href="tabla">Tabla</a>
+      <a mat-list-item href="vista2">Direccion</a>
+      <a mat-list-item href="vista3">Formulario</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
