--- a/src/app/barra-lateral/barra-lateral.component.html
+++ b/src/app/barra-lateral/barra-lateral.component.html
@@ -5,7 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="tabla">Tabla</a>
+      <a mat-list-item href="vista1">Tabla</a>
       <a mat-list-item href="vista2">Direccion</a>
       <a mat-list-item href="vista3">Formulario</a>
     </mat-nav-list>
@@ -22,8 +22,9 @@
         </button>
       }
       <span>angularMaterial</span>
-      <router-outlet></router-outlet>
+
      </mat-toolbar>
     <!-- Add Content Here -->
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
