--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-barra-lateral></app-barra-lateral>
-<!-- <app-direccion></app-direccion>
-<app-tabla></app-tabla> -->
-<!-- <router-outlet></router-outlet> -->
+<app-direccion></app-direccion>
+<app-tabla></app-tabla>
+
