--- a/src/app/barra-lateral/barra-lateral.component.html
+++ b/src/app/barra-lateral/barra-lateral.component.html
@@ -6,8 +6,8 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item href="vista1">Tabla</a>
-      <a mat-list-item href="vista2">Direccion</a>
-      <a mat-list-item href="vista3">Formulario</a>
+      <a mat-list-item href="vista2">Formulario</a>
+      <a mat-list-item href="vista3">Arbol</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
