--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+@use "saas:map";
+@use "@angular/material" as mat;
+@include mat.core();
+
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
