--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,24 @@
 @use "@angular/material" as mat;
 @include mat.core();
 
+$my-basic: mat.define-palette(mat.$pink-palette, 200);
+$my-primary: mat.define-palette(mat.$purple-palette, 600);
+$my-accent: mat.define-palette(mat.$indigo-palette, 400);
+$my-warm: mat.define-palette(mat.$blue-palette, 100);
+
+$my-theme: mat.define-light-theme((
+    color: (
+        basic: $my-basic,
+        primary: $my-primary,
+        accent: $my-accent,
+        warn: $my-warm,
+    ),
+    typography: mat.define-typography-config(
+        $font-family: 'rubik'
+    ),
+    density: 0,
+));
+
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
