--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,8 @@ $my-theme: mat.define-light-theme((
     density: 0,
 ));
 
+@include mat.all-component-themes($my-theme);
+
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
