--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,8 @@
 @use "@angular/material" as mat;
 @include mat.core();
 
-$my-basic: mat.define-palette(mat.$pink-palette, 200);
-$my-primary: mat.define-palette(mat.$purple-palette, 600);
+$my-basic: mat.define-palette(mat.$purple-palette, 200);
+$my-primary: mat.define-palette(mat.$pink-palette, 600);
 $my-accent: mat.define-palette(mat.$indigo-palette, 400);
 $my-warm: mat.define-palette(mat.$blue-palette, 100);
 
